# R-Ray

./: Cargo.toml
crates/libs/egui-icons-macro/: Cargo.toml
crates/libs/egui-icons-macro/src/: lib.rs
crates/libs/egui-lucide-icons/: Cargo.toml
crates/libs/egui-lucide-icons/src/: lib.rs
crates/libs/transform-gizmo/: Cargo.toml
crates/libs/transform-gizmo-bevy/: Cargo.toml
crates/libs/typesafe-icons-macro/: Cargo.toml
crates/libs/typesafe-icons-macro/src/: lib.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: camera.rs  editor_commands.rs  gizmo.rs  main.rs  picking.rs  utils.rs
crates/sdk/src/domain/: mod.rs
crates/sdk/src/ui/: asset.rs  camera_viewport.rs  hierarchy.rs  mod.rs  resource.rs  utils.rs
domain/: Cargo.toml
sdk/: Cargo.toml
sdk/src/: camera.rs  main.rs
sdk/src/domain/: mod.rs
